test/regtest/goldens/errors/unresolved_symbol3.ir
Error: Error: Неизвестный модуль: Черепаха, доступные модули: Строки,Файлы @ Line: 2, Byte: 1, Column: 1

